fixed spacing of below buttons

--- a/src/Home.css
+++ b/src/Home.css
@@ -170,22 +170,22 @@
   align-items: center;
   justify-content: flex-end;
   order: 2;
-  margin-top: 250px;
+  margin-top: 200px;
   margin-right: auto;
   margin-left: auto;
 }
 
 .home-cat-circle {
   position: absolute;
-  width: 320px;
-  height: 120px;
-  background: radial-gradient(ellipse at 50% 50%, rgba(0, 212, 255, 0.6) 0%, rgba(0, 212, 255, 0.2) 60%, rgba(0, 212, 255, 0) 100%);
+  width: 500px;
+  height: 150px;
+  background: radial-gradient(ellipse at 50% 50%, rgba(29, 113, 146, 0.8) 0%, rgba(164, 176, 182, 0.4) 50%, rgba(100, 200, 255, 0) 80%);
   border-radius: 50%;
-  bottom: 10px;
+  bottom: 0px;
   left: 50%;
   transform: translateX(-50%);
   z-index: 0;
-  filter: blur(15px);
+  filter: blur(25px);
 }
 
 .home-cat {
@@ -326,7 +326,7 @@
   width: 100%;
   text-align: center;
   margin-top: auto;
-  padding-bottom: 5px;
+  padding-bottom: 40px;
 }
 
 .home-participate-title,
